--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Game of life</title>
 </head>
+<style>
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  body {
+    overflow: hidden;
+    background-color: #333;
+  }
+  canvas {
+    margin: auto;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+</style>
 <body>
   <canvas id="c" width="500" height="500"></canvas>
   <script src="./app.js"></script>
